--- a/Header.html
+++ b/Header.html
@@ -1,7 +1,14 @@
+ 
+ <header class="header-0"> 
+  
+ <head>
+     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>EverythingB2C</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  
+    <link rel="stylesheet" href="./Header.css">
 
-<header class="header-0">
-  
-  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   
   <!-- Bootstrap Icons (optional for icons) -->
@@ -11,8 +18,9 @@
  <!-- Bootstrap Bundle JS (includes Popper) -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="./Header.css">
-    <link rel="stylesheet" href="./Footer.css">
+</head>
+  
+    
 
 <section class="header2">
   <div class="nav-links">
@@ -199,57 +207,31 @@
     </div>
   </nav>
 </div>
-<!---------------------Product section ------------------------------------------------------------------------------------------------------>
 
 
 
+<div id="wishlist-modal" class="wishlist-modal">
+  <div class="wishlist-modal-content">
+    <div id="wishlist-icon" class="wishlist-icon">❤️</div>
+    <div id="wishlist-message" class="wishlist-message">Product name here</div>
+    <div class="wishlist-buttons">
+      <button onclick="location.href='wishlist.html'" class="wishlist-btn">♡ View Wishlist</button>
+      <button onclick="closeWishlistModal()" class="wishlist-btn close">✕ Close</button>
+    </div>
+  </div>
+</div>
 
 
+<div id="cart-modal" style="display:none;" class="cart-modal">
+  <div class="cart-modal-content">
+    <div id="cart-icon" class="cart-icon">🛒</div>
+    <p id="cart-message" class="cart-message">Item added to cart</p>
+    <div class="cart-buttons">
+      <button class="cart-btn view" onclick="location.href='Cart.html'">🛍️ View Cart</button>
+      <button class="cart-btn close" onclick="closeCartModal()">❌ Close</button>
+    </div>
+  </div>
+</div>
 
-<!---------------------Product section ------------------------------------------------------------------------------------------------------>
-
-
-
-<!---------------------------------------------------------------------------------------------------->
-
-<!---Footer Section ------------------------->
-
-
-<!------------------------------------pin code popup call--------------------------------------------------------------->
-
-
-
-</header>
-
-
- <div id="Footer-container0"></div>
-
-<script>
-  fetch('Footer.html')
-    .then(response => response.text())
-    .then(data => {
-      // Create a temporary container to parse HTML
-      const tempDiv = document.createElement('div');
-      tempDiv.innerHTML = data;
-
-      // Append only HTML (not script) to the container
-      const footerContainer = document.getElementById('Footer-container0');
-      footerContainer.innerHTML = tempDiv.innerHTML;
-
-      // Find and execute scripts manually
-      const scripts = tempDiv.querySelectorAll('script');
-      scripts.forEach(script => {
-        const newScript = document.createElement('script');
-        if (script.src) {
-          newScript.src = script.src; // for external scripts
-        } else {
-          newScript.textContent = script.textContent; // for inline scripts
-        }
-        document.body.appendChild(newScript);
-      });
-    });
-</script>
-
+ </header>
  
-
-
