--- a/Kichen2.html
+++ b/Kichen2.html
@@ -12,76 +12,41 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+<script src="Header.js" defer></script>
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
+  
+ <link rel="stylesheet" href="./Header.css">
+<div id="header-0"></div>
+<!-- Wishlist Modal Structure (Place at bottom of body) -->
+<!-- Wishlist Modal -->
+<div id="wishlist-modal" class="wishlist-modal">
+  <div class="wishlist-modal-content">
+    <div id="wishlist-icon" class="wishlist-icon">❤️</div>
+    <div id="wishlist-message" class="wishlist-message">Product added to wishlist</div>
+    <div class="wishlist-buttons">
+      <button onclick="location.href='wishlist.html'" class="wishlist-btn">♡ View Wishlist</button>
+      <button onclick="closeWishlistModal()" class="wishlist-btn close">✕ Close</button>
+    </div>
+  </div>
+</div>
 
-  <!-- Header -->
-  <div id="header-0"></div>
 
-  <!-- Products -->
-  <div class="products"></div>
 
-  <!-- Footer -->
-  <div id="Footer-container0"></div>
 
-  <!-- Load Header -->
+
+  <!-- header area -->
+    <div id="Footer-container0"></div>
+
   <script>
-    fetch('header.html')
-      .then(response => response.text())
-      .then(html => {
-        const container = document.getElementById('header-0');
-
-        // Create temp div
-        const tempDiv = document.createElement('div');
-        tempDiv.innerHTML = html;
-
-        // Load only non-script content
-        const scripts = tempDiv.querySelectorAll('script');
-        const nonScriptContent = [...tempDiv.childNodes].filter(node => node.nodeName !== 'SCRIPT');
-        container.innerHTML = '';
-        nonScriptContent.forEach(node => container.appendChild(node));
-
-        // Load and run header scripts
-        scripts.forEach(script => {
-          const newScript = document.createElement('script');
-          if (script.src) {
-            newScript.src = script.src;
-          } else {
-            newScript.textContent = script.textContent;
-          }
-          document.body.appendChild(newScript);
-        });
-      });
-  </script>
-
-  <!-- Load Footer -->
-  <script>
+    // JavaScript to load the header
     fetch('Footer.html')
       .then(response => response.text())
-      .then(html => {
-        const container = document.getElementById('Footer-container0');
-
-        const tempDiv = document.createElement('div');
-        tempDiv.innerHTML = html;
-
-        const scripts = tempDiv.querySelectorAll('script');
-        const nonScriptContent = [...tempDiv.childNodes].filter(node => node.nodeName !== 'SCRIPT');
-        container.innerHTML = '';
-        nonScriptContent.forEach(node => container.appendChild(node));
-
-        scripts.forEach(script => {
-          const newScript = document.createElement('script');
-          if (script.src) {
-            newScript.src = script.src;
-          } else {
-            newScript.textContent = script.textContent;
-          }
-          document.body.appendChild(newScript);
-        });
+      .then(data => {
+        document.getElementById('Footer-container0').innerHTML = data;
       });
   </script>
 
