--- a/Cart.html
+++ b/Cart.html
@@ -232,103 +232,135 @@
         <select id="state-select">
           <option value="">State/province</option>
         </select>
-        <input type="text" placeholder="Suburb/city" />
-        <input type="text" placeholder="Zip/postcode" />
-        <button type="submit">Estimate Shipping</button>
+       <input type="text" id="pincode" placeholder="Zip/postcode" />
+<button type="submit">Estimate Shipping</button>
+<div id="delivery-charges">Delivery Charges: ₹0.00</div>
+<div id="delivery-error" class="delivery-error"></div>
+
       </form>
     </div>
   </div>
 </div>
+<script>
+  const cartContainer = document.getElementById("cart-container");
+  const subtotalSpan = document.getElementById("subtotal");
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  let deliveryCharge = 0;
 
+  const deliveryRates = {
+    "415413": 50,
+    "110001": 30,
+    "600001": 70,
+    "500001": 40,
+    "700001": 35,
+    "380001": 45
+    // Add more here...
+  };
 
+  function getDeliveryCharge(pincode) {
+    return deliveryRates[pincode]; // 🔧 Return undefined if not found
+  }
 
-  <script>
-    const cartContainer = document.getElementById("cart-container");
-    const subtotalSpan = document.getElementById("subtotal");
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
-
- function renderCart() {
-  cartContainer.innerHTML = `
-    <div class="cart-header">
-      <div>ITEM</div>
-      <div>PRICE</div>
-      <div>QUANTITY</div>
-      <div>TOTAL</div>
-      <div></div>
-    </div>
-  `;
-
-  let subtotal = 0;
-
-  cart.forEach((item, index) => {
-    const price = parseFloat(item.pay);  // Use pay price here
-    const total = price * item.qty;
-    subtotal += total;
-
-    const row = document.createElement("div");
-    row.className = "cart-row";
-    row.innerHTML = `
-      <div class="cart-item-title">
-        <img src="${item.image}" class="cart-img" alt="${item.title}">
-        <span>${item.title}</span>
+  function renderCart() {
+    cartContainer.innerHTML = `
+      <div class="cart-header">
+        <div>ITEM</div>
+        <div>PRICE</div>
+        <div>QUANTITY</div>
+        <div>TOTAL</div>
+        <div></div>
       </div>
-      <div>${price.toLocaleString('en-IN', { style: 'currency', currency: 'INR' })}</div>
-      <div class="qty-control">
-        <button onclick="updateQty(${index}, -1)">−</button>
-        <input type="number" value="${item.qty}" min="1" onchange="changeQty(${index}, this.value)">
-        <button onclick="updateQty(${index}, 1)">+</button>
-      </div>
-      <div>${total.toLocaleString('en-IN', { style: 'currency', currency: 'INR' })}</div>
-      <div class="remove-x" onclick="removeItem(${index})">×</div>
     `;
-    cartContainer.appendChild(row);
-  });
 
-  subtotalSpan.textContent = subtotal.toLocaleString('en-IN', { style: 'currency', currency: 'INR' });
-  localStorage.setItem("cart", JSON.stringify(cart));
-}
+    let subtotal = 0;
 
+    cart.forEach((item, index) => {
+      const price = parseFloat(item.pay);
+      const total = price * item.qty;
+      subtotal += total;
 
-    function updateQty(index, delta) {
-      cart[index].qty = Math.max(1, cart[index].qty + delta);
-      renderCart();
-    }
-
-    function changeQty(index, value) {
-      const qty = parseInt(value);
-      cart[index].qty = qty > 0 ? qty : 1;
-      renderCart();
-    }
-
-    function removeItem(index) {
-      cart.splice(index, 1);
-      renderCart();
-    }
-
-    document.addEventListener("DOMContentLoaded", () => {
-      renderCart();
-
-      const states = [
-        "Andhra Pradesh", "Arunachal Pradesh", "Assam", "Bihar", "Chhattisgarh",
-        "Goa", "Gujarat", "Haryana", "Himachal Pradesh", "Jharkhand", "Karnataka",
-        "Kerala", "Madhya Pradesh", "Maharashtra", "Manipur", "Meghalaya", "Mizoram",
-        "Nagaland", "Odisha", "Punjab", "Rajasthan", "Sikkim", "Tamil Nadu",
-        "Telangana", "Tripura", "Uttar Pradesh", "Uttarakhand", "West Bengal",
-        "Delhi", "Jammu and Kashmir", "Ladakh"
-      ];
-
-      const stateSelect = document.getElementById("state-select");
-      states.forEach(state => {
-        const option = document.createElement("option");
-        option.value = option.textContent = state;
-        stateSelect.appendChild(option);
-      });
+      const row = document.createElement("div");
+      row.className = "cart-row";
+      row.innerHTML = `
+        <div class="cart-item-title">
+          <img src="${item.image}" class="cart-img" alt="${item.title}">
+          <span>${item.title}</span>
+        </div>
+        <div>${price.toLocaleString('en-IN', { style: 'currency', currency: 'INR' })}</div>
+        <div class="qty-control">
+          <button onclick="updateQty(${index}, -1)">−</button>
+          <input type="number" value="${item.qty}" min="1" onchange="changeQty(${index}, this.value)">
+          <button onclick="updateQty(${index}, 1)">+</button>
+        </div>
+        <div>${total.toLocaleString('en-IN', { style: 'currency', currency: 'INR' })}</div>
+        <div class="remove-x" onclick="removeItem(${index})">×</div>
+      `;
+      cartContainer.appendChild(row);
     });
-  </script>
 
+    const finalTotal = subtotal + deliveryCharge;
+    subtotalSpan.textContent = finalTotal.toLocaleString('en-IN', { style: 'currency', currency: 'INR' });
 
+    localStorage.setItem("cart", JSON.stringify(cart));
+  }
 
+  function updateQty(index, delta) {
+    cart[index].qty = Math.max(1, cart[index].qty + delta);
+    renderCart();
+  }
 
+  function changeQty(index, value) {
+    const qty = parseInt(value);
+    cart[index].qty = qty > 0 ? qty : 1;
+    renderCart();
+  }
+
+  function removeItem(index) {
+    cart.splice(index, 1);
+    renderCart();
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    renderCart();
+
+    // Fill state dropdown
+    const states = ["Maharashtra"];
+    const stateSelect = document.getElementById("state-select");
+    states.forEach(state => {
+      const option = document.createElement("option");
+      option.value = option.textContent = state;
+      stateSelect.appendChild(option);
+    });
+
+    const pincodeInput = document.getElementById("pincode");
+    const chargeDiv = document.getElementById("delivery-charges");
+    const deliveryError = document.getElementById("delivery-error"); // 🔧 New element for message
+
+    pincodeInput.addEventListener("input", () => {
+      const pincode = pincodeInput.value.trim();
+
+      if (pincode.length === 6 && /^\d{6}$/.test(pincode)) {
+        const charge = getDeliveryCharge(pincode);
+
+        if (charge !== undefined) {
+          deliveryCharge = charge;
+          chargeDiv.textContent = `Delivery Charges: ₹${deliveryCharge.toFixed(2)}`;
+          deliveryError.textContent = "";
+        } else {
+          deliveryCharge = 0;
+          chargeDiv.textContent = "Delivery Charges: ₹0.00";
+          deliveryError.textContent = "🥺 Delivery not available for this pincode.";
+        }
+      } else {
+        deliveryCharge = 0;
+        chargeDiv.textContent = "Delivery Charges: ₹0.00";
+        deliveryError.textContent = "";
+      }
+
+      renderCart();
+    });
+  });
+</script>
 
 
 <!------------------------------------pin code popup call--------------------------------------------------------------->
@@ -402,20 +434,6 @@
     <p>© 2025 EverythingB2C - <strong>All Rights Reserved</strong></p>
   </div>
 </footer>
-
-
-
-
-   <!-- Place at the end of <body> -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha384-CS9sG4NmB7JLFuEOQkTxkMTfLkZ91fv0NgS0KfhxxMLCQGEZQ3PRAkYgiD9DZwJr"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
 
 
 
