--- a/Header.html
+++ b/Header.html
@@ -1,25 +1,22 @@
  
  <header class="header-0"> 
   
- <head>
-     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EverythingB2C</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  
-    <link rel="stylesheet" href="./Header.css">
+<head>     
+  <meta charset="utf-8">     
+  <meta name="viewport" content="width=device-width, initial-scale=1">     
+  <title>EverythingB2C</title>   
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  
-  <!-- Bootstrap Icons (optional for icons) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="icon" href="./logo.webp" type="image/webp"> <!-- Change path/type as needed -->
+
   <!-- Bootstrap CSS -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
- <!-- Bootstrap Bundle JS (includes Popper) -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">        
+  <link rel="stylesheet" href="./Header.css">        
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />      
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">   
+  <!-- Optional: Avoid duplicate Bootstrap links -->
 </head>
-  
+
     
 
 <section class="header2">
@@ -232,6 +229,8 @@
     </div>
   </div>
 </div>
+
+
 
  </header>
  
