Resolved Pages Conflict

--- a/Cleaning-&-Household5.html
+++ b/Cleaning-&-Household5.html
@@ -82,7 +82,9 @@
     <div class="card" data-id="prod-1750318597901-8064">
   <div class="discount-banner">SAVE ₹13 (9% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Gala Sponge Wipe – 3 Pieces.webp" alt="Gala Sponge Wipe – 3 Pieces Super Absorbent">
+   <a href="./product/Gala-Sponge-Wipe – 3 Pieces-Super.html">
+     <img src="./Cleaning & Household/page5/Gala Sponge Wipe – 3 Pieces.webp" alt="Gala Sponge Wipe – 3 Pieces Super Absorbent">
+   </a>
   </div>
   <div class="product-details">
     <h3>Gala Sponge Wipe – 3 Pieces Super Absorbent</h3>
@@ -104,7 +106,9 @@
  <div class="card" data-id="prod-1750318738645-7955">
   <div class="discount-banner">SAVE ₹10 (7% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Rin Detergent Powder – 2 KG.webp" alt="Rin Detergent Powder – 2 KG">
+   <a href="./product/Rin-Detergent-Powder–2KG.html">
+     <img src="./Cleaning & Household/page5/Rin Detergent Powder – 2 KG.webp" alt="Rin Detergent Powder – 2 KG">
+   </a>
   </div>
   <div class="product-details">
     <h3>Rin Detergent Powder – 2 KG</h3>
@@ -126,7 +130,9 @@
  <div class="card" data-id="prod-1750318832529-510">
   <div class="discount-banner">SAVE ₹6 (4% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/VIM LIQUID BOTTLE 750 ML.webp" alt="VIM LIQUID BOTTLE 750 ML">
+   <a href="./product/VIM LIQUID-BOTTLE-750M.html">
+     <img src="./Cleaning & Household/page5/VIM LIQUID BOTTLE 750 ML.webp" alt="VIM LIQUID BOTTLE 750 ML">
+   </a>
   </div>
   <div class="product-details">
     <h3>VIM LIQUID BOTTLE 750 ML</h3>
@@ -148,7 +154,9 @@
  <div class="card" data-id="prod-1750318911999-1779">
   <div class="discount-banner">SAVE ₹38 (20% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Gala No Dust Broom.webp" alt="Gala No Dust Broom">
+ <a href="./product/Gala-No-Dust-Broom.html">
+     <img src="./Cleaning & Household/page5/Gala No Dust Broom.webp" alt="Gala No Dust Broom">
+ </a>
   </div>
   <div class="product-details">
     <h3>Gala No Dust Broom</h3>
@@ -170,7 +178,9 @@
  <div class="card" data-id="prod-1750319017423-6203">
   <div class="discount-banner">SAVE ₹20 (11% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Gala orbit Deck MoP with Handle.webp" alt="Gala orbit Deck MoP with Handle">
+    <a href="./product/Gala-orbit-Deck-MoP-with-Handle.html">
+      <img src="./Cleaning & Household/page5/Gala orbit Deck MoP with Handle.webp" alt="Gala orbit Deck MoP with Handle">
+    </a>
   </div>
   <div class="product-details">
     <h3>Gala orbit Deck MoP with Handle</h3>
@@ -192,7 +202,9 @@
  <div class="card" data-id="prod-1750319087680-1001">
   <div class="discount-banner">SAVE ₹19 (11% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16">
+    <a href="./product/Gala-Floor-Wiper-16.html">
+      <img src="./Cleaning & Household/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16">
+    </a>
   </div>
   <div class="product-details">
     <h3>Gala Floor Wiper 16</h3>
@@ -214,7 +226,9 @@
 <div class="card" data-id="prod-1750319156041-2866">
   <div class="discount-banner">SAVE ₹2 (1% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Harpic Toilet Cleaner.webp" alt="Harpic Toilet Cleaner Power Plus – 1 Litre">
+    <a href="./product/Harpic-Toilet-Cleaner-Power.html">
+      <img src="./Cleaning & Household/page5/Harpic Toilet Cleaner.webp" alt="Harpic Toilet Cleaner Power Plus – 1 Litre">
+    </a>
   </div>
   <div class="product-details">
     <h3>Harpic Toilet Cleaner Power Plus – 1 Litre</h3>
@@ -236,7 +250,9 @@
  <div class="card" data-id="prod-1750319216789-6094">
   <div class="discount-banner">SAVE ₹10 (5% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Gala Actifiber Cloth.webp" alt="Gala Actifiber Cloth">
+   <a href="./product/Gala-Actifiber-Cloth.html">
+     <img src="./Cleaning & Household/page5/Gala Actifiber Cloth.webp" alt="Gala Actifiber Cloth">
+   </a>
   </div>
   <div class="product-details">
     <h3>Gala Actifiber Cloth</h3>
@@ -258,7 +274,9 @@
  <div class="card" data-id="prod-1750319293079-11">
   <div class="discount-banner">SAVE ₹23 (10% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Gala Double Lip Wiper.webp" alt="Gala Double Lip Wiper">
+    <a href="./product/Gala-Double-Lip-Wiper.html">
+      <img src="./Cleaning & Household/page5/Gala Double Lip Wiper.webp" alt="Gala Double Lip Wiper">
+    </a>
   </div>
   <div class="product-details">
     <h3>Gala Double Lip Wiper<br> &#8203;</h3>
@@ -280,7 +298,9 @@
  <div class="card" data-id="prod-1750319451961-2182">
   <div class="discount-banner">SAVE ₹25 (10% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Gala Active Cloth – 3 Pieces.webp" alt="Gala Active Cloth – 3 Pieces">
+    <a href="./product/Gala Active Cloth – 3 Pieces.html">
+      <img src="./Cleaning & Household/page5/Gala Active Cloth – 3 Pieces.webp" alt="Gala Active Cloth – 3 Pieces">
+    </a>
   </div>
   <div class="product-details">
     <h3>Gala Active Cloth – 3 Pieces<br> &#8203;</h3>
@@ -299,10 +319,15 @@
   </div>
 </div>
 
+
+
 <div class="card" data-id="prod-1750319677959-1487">
   <div class="discount-banner">SAVE ₹25 (10% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Century Toilet Roll  Pack of 10.webp" alt="Century Toilet Roll | Pack of 10 2 Ply | 300 Pulls / Roll">
+   
+    <a href="./product/Century-Toilet-Roll.html">
+       <img src="./Cleaning & Household/page5/Century Toilet Roll  Pack of 10.webp" alt="Century Toilet Roll | Pack of 10 2 Ply | 300 Pulls / Roll">
+    </a>
   </div>
   <div class="product-details">
     <h3>Century Toilet Roll | Pack of 10 2 Ply | 300 Pulls / Roll</h3>
@@ -321,10 +346,14 @@
   </div>
 </div>
 
+
+
 <div class="card" data-id="prod-1750319740401-8290">
   <div class="discount-banner">SAVE ₹49 (18% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page5/Colin Glass and Household.webp" alt="Colin Glass and Household Cleaner Ultra Shine, 3X500 ml">
+  <a href="./product/Colin-Glass-and-Household-Cleaner.html">
+      <img src="./Cleaning & Household/page5/Colin Glass and Household.webp" alt="Colin Glass and Household Cleaner Ultra Shine, 3X500 ml">
+  </a>
   </div>
   <div class="product-details">
     <h3>Colin Glass and Household Cleaner Ultra Shine, 3X500 ml</h3>
