--- a/product/Gala-Double-Lip-Wiper.html
+++ b/product/Gala-Double-Lip-Wiper.html
@@ -25,13 +25,12 @@
    <body>
                      
     <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
-
-<div class="product-detail-card" data-id="prod-1750506884167">
+<div class="product-detail-card" data-id="prod-1750507148381">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹19 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹23 (10% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16" />
+      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Double Lip Wiper.webp" alt="Gala Double Lip Wiper" />
     </div>
     <div class="thumbnail-row">
       
@@ -39,13 +38,13 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Gala Floor Wiper 16</h2>
+    <h2 class="title">Gala Double Lip Wiper</h2>
     <div class="price-buttons1">
-      <button class="mrp" data-mrp="175">MRP ₹175</button>
-      <button class="pay" data-pay="156">PAY ₹156</button>
-      <div class="wishlist-toggle" data-id="prod-1750506884167">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750506884167">
-        <label for="wishlist-prod-1750506884167" class="wishlist-label">🤍</label>
+      <button class="mrp" data-mrp="220">MRP ₹220</button>
+      <button class="pay" data-pay="197">PAY ₹197</button>
+      <div class="wishlist-toggle" data-id="prod-1750507148381">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750507148381">
+        <label for="wishlist-prod-1750507148381" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
@@ -55,10 +54,11 @@
     <p><strong>CATEGORY:</strong>  Cleaning & Household</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>Gala Floor Wiper 16 – Wide blade wiper for quick and efficient drying of wet floors, ideal for everyday use.</p>
+      <p>Gala Double Lip Wiper – Features dual rubber lips for superior floor drying and streak-free cleaning in one swipe.</p>
     </div>
   </div>
 </div>
+
  <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
 
 
@@ -73,18 +73,66 @@
 
   <div class="products">
 
- <div class="card" data-id="prod-1750317925467-3197">
-  <div class="discount-banner">SAVE ₹26 (21% OFF)</div>
+ <div class="card" data-id="prod-1750316758769-8799">
+  <div class="discount-banner">SAVE ₹20 (24% OFF)</div>
   <div class="product-image">
-    <a href="./product/Generic-Floor-Wiper-Plastic.html">
-      <img src="./Cleaning & Household/page4/Generic Floor Wiper Plastic.webp" alt="Generic Floor Wiper Plastic">
+   <a href="./product/Century-Facial-Tissue-20-x-20-cm.html">
+     <img src="./Cleaning & Household/page3/Century Facial Tissue.webp" alt="Century Facial Tissue 20 x 20 cm | 100 Pull">
+   </a>
+  </div>
+  <div class="product-details">
+    <h3>Century Facial Tissue 20 x 20 cm | 100 Pull</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="85">MRP ₹85</button>
+      <button class="pay" data-pay="65">PAY ₹65</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
+ <div class="card" data-id="prod-1750316920048-7056">
+  <div class="discount-banner">SAVE ₹14 (17% OFF)</div>
+  <div class="product-image">
+   <a href="./product/G-Plus-Toilet-Cleaner-500-ml.html">
+     <img src="./Cleaning & Household/page3/G Plus Toilet Cleaner 500 ml.webp" alt="G Plus Toilet Cleaner 500 ml">
+   </a>
+  </div>
+  <div class="product-details">
+    <h3>G Plus Toilet Cleaner 500 ml</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="82">MRP ₹82</button>
+      <button class="pay" data-pay="68">PAY ₹68</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
+ <div class="card" data-id="prod-1750316989023-3656">
+  <div class="discount-banner">SAVE ₹4 (5% OFF)</div>
+  <div class="product-image">
+    <a href="./product/Rin-Detergent-Powder–1 kg.html">
+      <img src="./Cleaning & Household/page3/Rin Detergent Powder – 1 kg.webp" alt="Rin Detergent Powder – 1 kg">
     </a>
   </div>
   <div class="product-details">
-    <h3>Generic Floor Wiper Plastic</h3>
+    <h3>Rin Detergent Powder – 1 kg</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="125">MRP ₹125</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="73">MRP ₹73</button>
+      <button class="pay" data-pay="69">PAY ₹69</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -97,66 +145,18 @@
   </div>
 </div>
 
- <div class="card" data-id="prod-1750317996070-8521">
-  <div class="discount-banner">SAVE ₹7 (7% OFF)</div>
+ <div class="card" data-id="prod-1750317059096-3316">
+  <div class="discount-banner">SAVE ₹18 (18% OFF)</div>
   <div class="product-image">
-   <a href="./product/Tide-Detergent-Powder – 1kg.html">
-     <img src="./Cleaning & Household/page4/Tide Detergent Powder – 1 kg.webp" alt="Tide Detergent Powder – 1 kg Jasmine & Rose">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Tide Detergent Powder – 1 kg Jasmine & Rose</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="106">MRP ₹106</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318053199-626">
-  <div class="discount-banner">SAVE ₹7 (6% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Dettol-Liquid-Handwash.html">
-     <img src="./Cleaning & Household/page4/Dettol Liquid Handwash Refill.webp" alt="Dettol Liquid Handwash Refill 750 ml">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Dettol Liquid Handwash Refill 750 ml</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="109">MRP ₹109</button>
-      <button class="pay" data-pay="102">PAY ₹102</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318130630-6953">
-  <div class="discount-banner">SAVE ₹10 (8% OFF)</div>
-  <div class="product-image">
-  <a href="./product/Surf-Excel-Easy-Wash-Detergent.html">
-      <img src="./Cleaning & Household/page4/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash Detergent Powder Blue – 1 Kg">
+  <a href="./product/Gala-Chandra-Kharata-Broom.html">
+      <img src="./Cleaning & Household/page3/Gala Chandra Kharata Broom.webp" alt="Gala Chandra Kharata Broom">
   </a>
   </div>
   <div class="product-details">
-    <h3>Surf Excel Easy Wash Detergent Powder Blue – 1 Kg</h3>
+    <h3>Gala Chandra Kharata Broom</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="118">MRP ₹118</button>
-      <button class="pay" data-pay="108">PAY ₹108</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="100">MRP ₹100</button>
+      <button class="pay" data-pay="82">PAY ₹82</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -168,9 +168,6 @@
     </div>
   </div>
 </div>
-
-
-
 
 
 
