--- a/product/Harpic-Toilet-Cleaner-Power.html
+++ b/product/Harpic-Toilet-Cleaner-Power.html
@@ -25,13 +25,12 @@
    <body>
                      
     <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
-
-<div class="product-detail-card" data-id="prod-1750506884167">
+<div class="product-detail-card" data-id="prod-1750507012333">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹19 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹2 (1% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16" />
+      <img id="mainImage" src="/asset/household and cleaning/page5/Harpic Toilet Cleaner.webp" alt="Harpic Toilet Cleaner Power Plus – 1 Litre" />
     </div>
     <div class="thumbnail-row">
       
@@ -39,23 +38,23 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Gala Floor Wiper 16</h2>
+    <h2 class="title">Harpic Toilet Cleaner Power Plus – 1 Litre</h2>
     <div class="price-buttons1">
-      <button class="mrp" data-mrp="175">MRP ₹175</button>
-      <button class="pay" data-pay="156">PAY ₹156</button>
-      <div class="wishlist-toggle" data-id="prod-1750506884167">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750506884167">
-        <label for="wishlist-prod-1750506884167" class="wishlist-label">🤍</label>
+      <button class="mrp" data-mrp="187">MRP ₹187</button>
+      <button class="pay" data-pay="185">PAY ₹185</button>
+      <div class="wishlist-toggle" data-id="prod-1750507012333">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750507012333">
+        <label for="wishlist-prod-1750507012333" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
       <input type="number" class="quantity-input" value="1" min="1">
       <button class="add-to-cart">ADD TO CART</button>
     </div>
-    <p><strong>CATEGORY:</strong>  Cleaning & Household</p>
+    <p><strong>CATEGORY:</strong> Cleaning & Household</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>Gala Floor Wiper 16 – Wide blade wiper for quick and efficient drying of wet floors, ideal for everyday use.</p>
+      <p>Harpic Toilet Cleaner Power Plus – 1 Litre – Powerful formula removes tough stains and kills 99.9% of germs for a sparkling clean toilet.</p>
     </div>
   </div>
 </div>
@@ -72,54 +71,6 @@
 
 
   <div class="products">
-
- <div class="card" data-id="prod-1750317925467-3197">
-  <div class="discount-banner">SAVE ₹26 (21% OFF)</div>
-  <div class="product-image">
-    <a href="./product/Generic-Floor-Wiper-Plastic.html">
-      <img src="./Cleaning & Household/page4/Generic Floor Wiper Plastic.webp" alt="Generic Floor Wiper Plastic">
-    </a>
-  </div>
-  <div class="product-details">
-    <h3>Generic Floor Wiper Plastic</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="125">MRP ₹125</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750317996070-8521">
-  <div class="discount-banner">SAVE ₹7 (7% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Tide-Detergent-Powder – 1kg.html">
-     <img src="./Cleaning & Household/page4/Tide Detergent Powder – 1 kg.webp" alt="Tide Detergent Powder – 1 kg Jasmine & Rose">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Tide Detergent Powder – 1 kg Jasmine & Rose</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="106">MRP ₹106</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
 
  <div class="card" data-id="prod-1750318053199-626">
   <div class="discount-banner">SAVE ₹7 (6% OFF)</div>
@@ -169,8 +120,53 @@
   </div>
 </div>
 
+ <div class="card" data-id="prod-1750318217203-5208">
+  <div class="discount-banner">SAVE ₹10 (8% OFF)</div>
+  <div class="product-image">
+  <a href="./product/Vim-Dishwash-Bar–300-g.html">
+      <img src="./Cleaning & Household/page4/Vim Dishwash Bar – 300 g.webp" alt="Vim Dishwash Bar – 300 g Pack of 6 | Lemon">
+  </a>
+  </div>
+  <div class="product-details">
+    <h3>Vim Dishwash Bar – 300 g Pack of 6 | Lemon <br> &#8203;</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="120">MRP ₹120</button>
+      <button class="pay" data-pay="110">PAY ₹110</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
-
+<div class="card" data-id="prod-1750318305161-2155">
+  <div class="discount-banner">SAVE ₹16 (12% OFF)</div>
+  <div class="product-image">
+  <a href="./product/Gala-Ezee-Squeezee.html">
+      <img src="./Cleaning & Household/page4/Gala Ezee Squeezee.webp" alt="Gala Ezee Squeezee">
+  </a>
+  </div>
+  <div class="product-details">
+    <h3>Gala Ezee Squeezee<br> &#8203;</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="130">MRP ₹130</button>
+      <button class="pay" data-pay="114">PAY ₹114</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
 
 
