--- a/Cleaning-&-Household6.html
+++ b/Cleaning-&-Household6.html
@@ -82,7 +82,9 @@
     <div class="card" data-id="prod-1750319900461-6255">
   <div class="discount-banner">SAVE ₹10 (4% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page6/HIT Mosquito & Fly Killer Spray.webp" alt="HIT Mosquito & Fly Killer Spray 700 ml">
+  <a href="./product/HIT-Mosquito-&-Fly-Killer-Spray.html">
+      <img src="./Cleaning & Household/page6/HIT Mosquito & Fly Killer Spray.webp" alt="HIT Mosquito & Fly Killer Spray 700 ml">
+  </a>
   </div>
   <div class="product-details">
     <h3>HIT Mosquito & Fly Killer Spray 700 ml</h3>
@@ -104,7 +106,9 @@
  <div class="card" data-id="prod-1750319962009-7985">
   <div class="discount-banner">SAVE ₹120 (30% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page6/GPlus White Floor Cleaner.webp" alt="GPlus White Floor Cleaner 5 Litre">
+    <a href="./product/GPlus-White-Floor-Cleaner.html">
+      <img src="./Cleaning & Household/page6/GPlus White Floor Cleaner.webp" alt="GPlus White Floor Cleaner 5 Litre">
+    </a>
   </div>
   <div class="product-details">
     <h3>GPlus White Floor Cleaner 5 Litre</h3>
@@ -126,7 +130,9 @@
 <div class="card" data-id="prod-1750320023471-4232">
   <div class="discount-banner">SAVE ₹20 (6% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page6/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash 3 kg">
+   <a href="./product/Surf-Excel-Easy-Wash-3-kg.html">
+     <img src="./Cleaning & Household/page6/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash 3 kg">
+   </a>
   </div>
   <div class="product-details">
     <h3>Surf Excel Easy Wash 3 kg</h3>
@@ -148,7 +154,9 @@
 <div class="card" data-id="prod-1750320124325-9411">
   <div class="discount-banner">SAVE ₹40 (7% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page6/Ariel Washing Powder.webp" alt="Ariel Washing Powder 3 kg">
+    <a href="./product/Ariel-Washing-Powder-3kg.html">
+      <img src="./Cleaning & Household/page6/Ariel Washing Powder.webp" alt="Ariel Washing Powder 3 kg">
+    </a>
   </div>
   <div class="product-details">
     <h3>Ariel Washing Powder 3 kg</h3>
@@ -170,7 +178,9 @@
 <div class="card" data-id="prod-1750320181896-8315">
   <div class="discount-banner">SAVE ₹249 (25% OFF)</div>
   <div class="product-image">
-    <img src="./Cleaning & Household/page6/Spin mop with bucket, steel wringer & 2 refills.webp" alt="Spin mop with bucket, steel wringer & 2 refills">
+   <a href="./product/Spin-mop-with-bucket.html">
+     <img src="./Cleaning & Household/page6/Spin mop with bucket, steel wringer & 2 refills.webp" alt="Spin mop with bucket, steel wringer & 2 refills">
+   </a>
   </div>
   <div class="product-details">
     <h3>Spin mop with bucket, steel wringer & 2 refills</h3>
