--- a/product/Ariel-Washing-Powder-3kg.html
+++ b/product/Ariel-Washing-Powder-3kg.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -25,13 +27,12 @@
    <body>
                      
     <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
-
-<div class="product-detail-card" data-id="prod-1750506884167">
+    <div class="product-detail-card" data-id="prod-1750507954388">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹19 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹40 (7% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16" />
+      <img id="mainImage" src="/asset/household and cleaning/page6/Ariel Washing Powder.webp" alt="Ariel Washing Powder 3 kg" />
     </div>
     <div class="thumbnail-row">
       
@@ -39,13 +40,13 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Gala Floor Wiper 16</h2>
+    <h2 class="title">Ariel Washing Powder 3 kg</h2>
     <div class="price-buttons1">
-      <button class="mrp" data-mrp="175">MRP ₹175</button>
-      <button class="pay" data-pay="156">PAY ₹156</button>
-      <div class="wishlist-toggle" data-id="prod-1750506884167">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750506884167">
-        <label for="wishlist-prod-1750506884167" class="wishlist-label">🤍</label>
+      <button class="mrp" data-mrp="560">MRP ₹560</button>
+      <button class="pay" data-pay="520">PAY ₹520</button>
+      <div class="wishlist-toggle" data-id="prod-1750507954388">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750507954388">
+        <label for="wishlist-prod-1750507954388" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
@@ -55,10 +56,11 @@
     <p><strong>CATEGORY:</strong>  Cleaning & Household</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>Gala Floor Wiper 16 – Wide blade wiper for quick and efficient drying of wet floors, ideal for everyday use.</p>
+      <p>Ariel Washing Powder 3 kg – Delivers deep cleaning and stain removal, keeping your clothes brilliantly clean and fresh.</p>
     </div>
   </div>
 </div>
+
  <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
 
 
@@ -73,90 +75,18 @@
 
   <div class="products">
 
- <div class="card" data-id="prod-1750317925467-3197">
-  <div class="discount-banner">SAVE ₹26 (21% OFF)</div>
+ <div class="card" data-id="prod-1750317059096-3316">
+  <div class="discount-banner">SAVE ₹18 (18% OFF)</div>
   <div class="product-image">
-    <a href="./product/Generic-Floor-Wiper-Plastic.html">
-      <img src="./Cleaning & Household/page4/Generic Floor Wiper Plastic.webp" alt="Generic Floor Wiper Plastic">
-    </a>
-  </div>
-  <div class="product-details">
-    <h3>Generic Floor Wiper Plastic</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="125">MRP ₹125</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750317996070-8521">
-  <div class="discount-banner">SAVE ₹7 (7% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Tide-Detergent-Powder – 1kg.html">
-     <img src="./Cleaning & Household/page4/Tide Detergent Powder – 1 kg.webp" alt="Tide Detergent Powder – 1 kg Jasmine & Rose">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Tide Detergent Powder – 1 kg Jasmine & Rose</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="106">MRP ₹106</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318053199-626">
-  <div class="discount-banner">SAVE ₹7 (6% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Dettol-Liquid-Handwash.html">
-     <img src="./Cleaning & Household/page4/Dettol Liquid Handwash Refill.webp" alt="Dettol Liquid Handwash Refill 750 ml">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Dettol Liquid Handwash Refill 750 ml</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="109">MRP ₹109</button>
-      <button class="pay" data-pay="102">PAY ₹102</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318130630-6953">
-  <div class="discount-banner">SAVE ₹10 (8% OFF)</div>
-  <div class="product-image">
-  <a href="./product/Surf-Excel-Easy-Wash-Detergent.html">
-      <img src="./Cleaning & Household/page4/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash Detergent Powder Blue – 1 Kg">
+  <a href="./product/Gala-Chandra-Kharata-Broom.html">
+      <img src="./Cleaning & Household/page3/Gala Chandra Kharata Broom.webp" alt="Gala Chandra Kharata Broom">
   </a>
   </div>
   <div class="product-details">
-    <h3>Surf Excel Easy Wash Detergent Powder Blue – 1 Kg</h3>
+    <h3>Gala Chandra Kharata Broom</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="118">MRP ₹118</button>
-      <button class="pay" data-pay="108">PAY ₹108</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="100">MRP ₹100</button>
+      <button class="pay" data-pay="82">PAY ₹82</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -169,9 +99,78 @@
   </div>
 </div>
 
+ <div class="card" data-id="prod-1750317149649-7470">
+  <div class="discount-banner">SAVE ₹-1 (-1% OFF)</div>
+  <div class="product-image">
+   
+  <a href="./product/Harpic-Floral-Bathroom-Cleaner.html">
+     <img src="./Cleaning & Household/page3/Harpic Floral Bathroom Cleaner.webp" alt="Harpic Floral Bathroom Cleaner 500 ml">
+  </a>
+  </div>
+  <div class="product-details">
+    <h3>Harpic Floral Bathroom Cleaner 500 ml</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="86">MRP ₹86</button>
+      <button class="pay" data-pay="87">PAY ₹87</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
+<div class="card" data-id="prod-1750317205404-6323">
+  <div class="discount-banner">SAVE ₹11 (11% OFF)</div>
+  <div class="product-image">
+   <a href="./product/Gala-Cloth-Brush.html">
+     <img src="./Cleaning & Household/page3/Gala Cloth Brush.webp" alt="Gala Cloth Brush">
+   </a>
+  </div>
+  <div class="product-details">
+    <h3>Gala Cloth Brush</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="99">MRP ₹99</button>
+      <button class="pay" data-pay="88">PAY ₹88</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
-
+<div class="card" data-id="prod-1750317286238-785">
+  <div class="discount-banner">SAVE ₹3 (3% OFF)</div>
+  <div class="product-image">
+  <a href="./product/Lizol-Surface-Cleaner-Floral.html">
+      <img src="./Cleaning & Household/page3/Lizol Surface Cleaner.webp" alt="Lizol Surface Cleaner Floral – 500 ml">
+  </a>
+  </div>
+  <div class="product-details">
+    <h3>Lizol Surface Cleaner Floral – 500 ml</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="93">MRP ₹93</button>
+      <button class="pay" data-pay="90">PAY ₹90</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
 
 
