--- a/product/Century-Toilet-Roll.html
+++ b/product/Century-Toilet-Roll.html
@@ -25,13 +25,12 @@
    <body>
                      
     <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
-
-<div class="product-detail-card" data-id="prod-1750506884167">
+<div class="product-detail-card" data-id="prod-1750507278509">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹19 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹25 (10% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16" />
+      <img id="mainImage" src="/asset/household and cleaning/page5/Century Toilet Roll  Pack of 10.webp" alt="Century Toilet Roll | Pack of 10 2 Ply | 300 Pulls / Roll" />
     </div>
     <div class="thumbnail-row">
       
@@ -39,23 +38,23 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Gala Floor Wiper 16</h2>
+    <h2 class="title">Century Toilet Roll | Pack of 10 2 Ply | 300 Pulls / Roll</h2>
     <div class="price-buttons1">
-      <button class="mrp" data-mrp="175">MRP ₹175</button>
-      <button class="pay" data-pay="156">PAY ₹156</button>
-      <div class="wishlist-toggle" data-id="prod-1750506884167">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750506884167">
-        <label for="wishlist-prod-1750506884167" class="wishlist-label">🤍</label>
+      <button class="mrp" data-mrp="250">MRP ₹250</button>
+      <button class="pay" data-pay="225">PAY ₹225</button>
+      <div class="wishlist-toggle" data-id="prod-1750507278509">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750507278509">
+        <label for="wishlist-prod-1750507278509" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
       <input type="number" class="quantity-input" value="1" min="1">
       <button class="add-to-cart">ADD TO CART</button>
     </div>
-    <p><strong>CATEGORY:</strong>  Cleaning & Household</p>
+    <p><strong>CATEGORY:</strong> Cleaning & Household</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>Gala Floor Wiper 16 – Wide blade wiper for quick and efficient drying of wet floors, ideal for everyday use.</p>
+      <p>Century Toilet Roll | Pack of 10 2 Ply | 300 Pulls/Roll – Soft, strong, and absorbent rolls designed for comfortable and hygienic use.</p>
     </div>
   </div>
 </div>
@@ -73,90 +72,18 @@
 
   <div class="products">
 
- <div class="card" data-id="prod-1750317925467-3197">
-  <div class="discount-banner">SAVE ₹26 (21% OFF)</div>
+<div class="card" data-id="prod-1750313997899-6732">
+  <div class="discount-banner">SAVE ₹1 (10% OFF)</div>
   <div class="product-image">
-    <a href="./product/Generic-Floor-Wiper-Plastic.html">
-      <img src="./Cleaning & Household/page4/Generic Floor Wiper Plastic.webp" alt="Generic Floor Wiper Plastic">
-    </a>
-  </div>
-  <div class="product-details">
-    <h3>Generic Floor Wiper Plastic</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="125">MRP ₹125</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750317996070-8521">
-  <div class="discount-banner">SAVE ₹7 (7% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Tide-Detergent-Powder – 1kg.html">
-     <img src="./Cleaning & Household/page4/Tide Detergent Powder – 1 kg.webp" alt="Tide Detergent Powder – 1 kg Jasmine & Rose">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Tide Detergent Powder – 1 kg Jasmine & Rose</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="106">MRP ₹106</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318053199-626">
-  <div class="discount-banner">SAVE ₹7 (6% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Dettol-Liquid-Handwash.html">
-     <img src="./Cleaning & Household/page4/Dettol Liquid Handwash Refill.webp" alt="Dettol Liquid Handwash Refill 750 ml">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Dettol Liquid Handwash Refill 750 ml</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="109">MRP ₹109</button>
-      <button class="pay" data-pay="102">PAY ₹102</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318130630-6953">
-  <div class="discount-banner">SAVE ₹10 (8% OFF)</div>
-  <div class="product-image">
-  <a href="./product/Surf-Excel-Easy-Wash-Detergent.html">
-      <img src="./Cleaning & Household/page4/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash Detergent Powder Blue – 1 Kg">
+  <a href="/product/Ghadi-Detergent-Cake.html">
+      <img src="./Cleaning & Household/page1/Ghadi Detergent Cake – 185 gm.webp" alt="Ghadi Detergent Cake – 185 gm">
   </a>
   </div>
   <div class="product-details">
-    <h3>Surf Excel Easy Wash Detergent Powder Blue – 1 Kg</h3>
+    <h3>Ghadi Detergent Cake – 185 gm</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="118">MRP ₹118</button>
-      <button class="pay" data-pay="108">PAY ₹108</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="10">MRP ₹10</button>
+      <button class="pay" data-pay="9">PAY ₹9</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -170,8 +97,77 @@
 </div>
 
 
+<div class="card" data-id="prod-1750314076162-6113">
+  <div class="discount-banner">SAVE ₹1 (10% OFF)</div>
+  <div class="product-image">
+ <a href="/product/Wheel-Active-2-In-1.html">
+     <img src="./Cleaning & Household/page1/Wheel Active 2 In 1 Detergent Bar.webp" alt="Wheel Active 2 In 1 Detergent Bar 250 gm">
+ </a>
+  </div>
+  <div class="product-details">
+    <h3>Wheel Active 2 In 1 Detergent Bar 250 gm</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="10">MRP ₹10</button>
+      <button class="pay" data-pay="9">PAY ₹9</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
+<div class="card" data-id="prod-1750314333946-47">
+  <div class="discount-banner">SAVE ₹1 (7% OFF)</div>
+  <div class="product-image">
+   <a href="/product/Rin-Detergent-Bar– 250-gm.html">
+     <img src="./Cleaning & Household/page1/Rin Detergent Bar – 250 gm.webp" alt="Rin Detergent Bar – 250 gm">
+   </a>
+  </div>
+  <div class="product-details">
+    <h3>Rin Detergent Bar – 250 gm</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="14">MRP ₹14</button>
+      <button class="pay" data-pay="13">PAY ₹13</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
+<div class="card" data-id="prod-1750314408232-128">
+  <div class="discount-banner">SAVE ₹1 (7% OFF)</div>
+  <div class="product-image">
+  <a href="./product/Drain-It-Drain-Cleaner-Powder.html">
+      <img src="./Cleaning & Household/page1/Drain It Drain Cleaner Powder.webp" alt="Drain It Drain Cleaner Powder">
+  </a>
+  </div>
+  <div class="product-details">
+    <h3>Drain It Drain Cleaner Powder</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="15">MRP ₹15</button>
+      <button class="pay" data-pay="14">PAY ₹14</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
 
 
