--- a/product/Colin-Glass-and-Household-Cleaner.html
+++ b/product/Colin-Glass-and-Household-Cleaner.html
@@ -26,12 +26,13 @@
                      
     <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
 
-<div class="product-detail-card" data-id="prod-1750506884167">
+
+<div class="product-detail-card" data-id="prod-1750507417541">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹19 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹49 (18% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16" />
+      <img id="mainImage" src="/asset/household and cleaning/page5/Colin Glass and Household.webp" alt="Colin Glass and Household Cleaner Ultra Shine, 3X500 ml" />
     </div>
     <div class="thumbnail-row">
       
@@ -39,23 +40,23 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Gala Floor Wiper 16</h2>
+    <h2 class="title">Colin Glass and Household Cleaner Ultra Shine, 3X500 ml</h2>
     <div class="price-buttons1">
-      <button class="mrp" data-mrp="175">MRP ₹175</button>
-      <button class="pay" data-pay="156">PAY ₹156</button>
-      <div class="wishlist-toggle" data-id="prod-1750506884167">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750506884167">
-        <label for="wishlist-prod-1750506884167" class="wishlist-label">🤍</label>
+      <button class="mrp" data-mrp="279">MRP ₹279</button>
+      <button class="pay" data-pay="230">PAY ₹230</button>
+      <div class="wishlist-toggle" data-id="prod-1750507417541">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750507417541">
+        <label for="wishlist-prod-1750507417541" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
       <input type="number" class="quantity-input" value="1" min="1">
       <button class="add-to-cart">ADD TO CART</button>
     </div>
-    <p><strong>CATEGORY:</strong>  Cleaning & Household</p>
+    <p><strong>CATEGORY:</strong> Cleaning & Household</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>Gala Floor Wiper 16 – Wide blade wiper for quick and efficient drying of wet floors, ideal for everyday use.</p>
+      <p>Colin Glass and Household Cleaner Ultra Shine, 3X500 ml – Delivers streak-free shine on glass and surfaces with a powerful cleaning formula.</p>
     </div>
   </div>
 </div>
@@ -72,19 +73,42 @@
 
 
   <div class="products">
-
- <div class="card" data-id="prod-1750317925467-3197">
-  <div class="discount-banner">SAVE ₹26 (21% OFF)</div>
+    <div class="card" data-id="prod-1750316347901-9699">
+  <div class="discount-banner">SAVE ₹15 (20% OFF)</div>
   <div class="product-image">
-    <a href="./product/Generic-Floor-Wiper-Plastic.html">
-      <img src="./Cleaning & Household/page4/Generic Floor Wiper Plastic.webp" alt="Generic Floor Wiper Plastic">
+ <a href="./product/Gala-Scrub-Pad – Set.html">
+     <img src="./Cleaning & Household/page3/Gala Scrub Pad – Set of 5.webp" alt="Gala Scrub Pad – Set of 5 Size – 3 x 4">
+ </a>
+  </div>
+  <div class="product-details">
+    <h3>Gala Scrub Pad – Set of 5 Size – 3 x 4</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="75">MRP ₹75</button>
+      <button class="pay" data-pay="60">PAY ₹60</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
+ <div class="card" data-id="prod-1750316455048-8982">
+  <div class="discount-banner">SAVE ₹20 (25% OFF)</div>
+  <div class="product-image">
+    <a href="./product/Floor-Cleaner-Whiter.html">
+      <img src="./Cleaning & Household/page3/Floor Cleaner Whiter – 1 Ltr.webp" alt="Floor Cleaner Whiter – 1 Ltr.">
     </a>
   </div>
   <div class="product-details">
-    <h3>Generic Floor Wiper Plastic</h3>
+    <h3>Floor Cleaner Whiter – 1 Ltr.</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="125">MRP ₹125</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="80">MRP ₹80</button>
+      <button class="pay" data-pay="60">PAY ₹60</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -97,18 +121,18 @@
   </div>
 </div>
 
- <div class="card" data-id="prod-1750317996070-8521">
-  <div class="discount-banner">SAVE ₹7 (7% OFF)</div>
+ <div class="card" data-id="prod-1750316518693-6059">
+  <div class="discount-banner">SAVE ₹20 (25% OFF)</div>
   <div class="product-image">
-   <a href="./product/Tide-Detergent-Powder – 1kg.html">
-     <img src="./Cleaning & Household/page4/Tide Detergent Powder – 1 kg.webp" alt="Tide Detergent Powder – 1 kg Jasmine & Rose">
+   <a href="./product/Disposable-Gloves-Plastic.html">
+     <img src="./Cleaning & Household/page3/Disposable Gloves Plastic.webp" alt="Disposable Gloves Plastic 80 Pcs.">
    </a>
   </div>
   <div class="product-details">
-    <h3>Tide Detergent Powder – 1 kg Jasmine & Rose</h3>
+    <h3>Disposable Gloves Plastic 80 Pcs.</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="106">MRP ₹106</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="80">MRP ₹80</button>
+      <button class="pay" data-pay="60">PAY ₹60</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -121,18 +145,18 @@
   </div>
 </div>
 
- <div class="card" data-id="prod-1750318053199-626">
-  <div class="discount-banner">SAVE ₹7 (6% OFF)</div>
+ <div class="card" data-id="prod-1750316605070-8104">
+  <div class="discount-banner">SAVE ₹7 (10% OFF)</div>
   <div class="product-image">
-   <a href="./product/Dettol-Liquid-Handwash.html">
-     <img src="./Cleaning & Household/page4/Dettol Liquid Handwash Refill.webp" alt="Dettol Liquid Handwash Refill 750 ml">
+   <a href="./product/Rin-Ala-Fabric-Whitener.html">
+     <img src="./Cleaning & Household/page3/Rin Ala Fabric Whitener.webp" alt="Rin Ala Fabric Whitener 500 ml">
    </a>
   </div>
   <div class="product-details">
-    <h3>Dettol Liquid Handwash Refill 750 ml</h3>
+    <h3>Rin Ala Fabric Whitener 500 ml</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="109">MRP ₹109</button>
-      <button class="pay" data-pay="102">PAY ₹102</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="69">MRP ₹69</button>
+      <button class="pay" data-pay="62">PAY ₹62</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -144,32 +168,6 @@
     </div>
   </div>
 </div>
-
- <div class="card" data-id="prod-1750318130630-6953">
-  <div class="discount-banner">SAVE ₹10 (8% OFF)</div>
-  <div class="product-image">
-  <a href="./product/Surf-Excel-Easy-Wash-Detergent.html">
-      <img src="./Cleaning & Household/page4/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash Detergent Powder Blue – 1 Kg">
-  </a>
-  </div>
-  <div class="product-details">
-    <h3>Surf Excel Easy Wash Detergent Powder Blue – 1 Kg</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="118">MRP ₹118</button>
-      <button class="pay" data-pay="108">PAY ₹108</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
-
 
 
 
