--- a/product/GPlus-White-Floor-Cleaner.html
+++ b/product/GPlus-White-Floor-Cleaner.html
@@ -25,13 +25,12 @@
    <body>
                      
     <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
-
-<div class="product-detail-card" data-id="prod-1750506884167">
+<div class="product-detail-card" data-id="prod-1750507718716">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹19 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹120 (30% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16" />
+      <img id="mainImage" src="/asset/household and cleaning/page6/GPlus White Floor Cleaner.webp" alt="GPlus White Floor Cleaner 5 Litre" />
     </div>
     <div class="thumbnail-row">
       
@@ -39,26 +38,27 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Gala Floor Wiper 16</h2>
+    <h2 class="title">GPlus White Floor Cleaner 5 Litre</h2>
     <div class="price-buttons1">
-      <button class="mrp" data-mrp="175">MRP ₹175</button>
-      <button class="pay" data-pay="156">PAY ₹156</button>
-      <div class="wishlist-toggle" data-id="prod-1750506884167">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750506884167">
-        <label for="wishlist-prod-1750506884167" class="wishlist-label">🤍</label>
+      <button class="mrp" data-mrp="400">MRP ₹400</button>
+      <button class="pay" data-pay="280">PAY ₹280</button>
+      <div class="wishlist-toggle" data-id="prod-1750507718716">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750507718716">
+        <label for="wishlist-prod-1750507718716" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
       <input type="number" class="quantity-input" value="1" min="1">
       <button class="add-to-cart">ADD TO CART</button>
     </div>
-    <p><strong>CATEGORY:</strong>  Cleaning & Household</p>
+    <p><strong>CATEGORY:</strong> Cleaning & Household</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>Gala Floor Wiper 16 – Wide blade wiper for quick and efficient drying of wet floors, ideal for everyday use.</p>
+      <p>GPlus White Floor Cleaner 5 Litre – Powerful formula for deep cleaning and germ protection, leaving floors spotless and fresh.</p>
     </div>
   </div>
 </div>
+
  <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
 
 
@@ -72,43 +72,18 @@
 
 
   <div class="products">
-
- <div class="card" data-id="prod-1750317925467-3197">
-  <div class="discount-banner">SAVE ₹26 (21% OFF)</div>
+  <div class="card" data-id="prod-1750315370746-9785">
+  <div class="discount-banner">SAVE ₹4 (8% OFF)</div>
   <div class="product-image">
-    <a href="./product/Generic-Floor-Wiper-Plastic.html">
-      <img src="./Cleaning & Household/page4/Generic Floor Wiper Plastic.webp" alt="Generic Floor Wiper Plastic">
-    </a>
-  </div>
-  <div class="product-details">
-    <h3>Generic Floor Wiper Plastic</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="125">MRP ₹125</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750317996070-8521">
-  <div class="discount-banner">SAVE ₹7 (7% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Tide-Detergent-Powder – 1kg.html">
-     <img src="./Cleaning & Household/page4/Tide Detergent Powder – 1 kg.webp" alt="Tide Detergent Powder – 1 kg Jasmine & Rose">
+   <a href="/product/Nylon-Scrubber–Pack-of-6.html">
+     <img src="./Cleaning & Household/page2/Nylon Scrubber – Pack of 6.webp" alt="Nylon Scrubber – Pack of 6">
    </a>
   </div>
   <div class="product-details">
-    <h3>Tide Detergent Powder – 1 kg Jasmine & Rose</h3>
+    <h3>Nylon Scrubber – Pack of 6</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="106">MRP ₹106</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="49">MRP ₹49</button>
+      <button class="pay" data-pay="45">PAY ₹45</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -121,42 +96,66 @@
   </div>
 </div>
 
- <div class="card" data-id="prod-1750318053199-626">
-  <div class="discount-banner">SAVE ₹7 (6% OFF)</div>
+ <div class="card" data-id="prod-1750315490108-7400">
+  <div class="discount-banner">SAVE ₹2 (4% OFF)</div>
   <div class="product-image">
-   <a href="./product/Dettol-Liquid-Handwash.html">
-     <img src="./Cleaning & Household/page4/Dettol Liquid Handwash Refill.webp" alt="Dettol Liquid Handwash Refill 750 ml">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Dettol Liquid Handwash Refill 750 ml</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="109">MRP ₹109</button>
-      <button class="pay" data-pay="102">PAY ₹102</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318130630-6953">
-  <div class="discount-banner">SAVE ₹10 (8% OFF)</div>
-  <div class="product-image">
-  <a href="./product/Surf-Excel-Easy-Wash-Detergent.html">
-      <img src="./Cleaning & Household/page4/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash Detergent Powder Blue – 1 Kg">
+  <a href="/product/Odonil-Air-Freshner–50-gm.html">
+      <img src="./Cleaning & Household/page2/Odonil Air Freshner – 50 gm.webp" alt="Odonil Air Freshner – 50 gm Orchid Dew">
   </a>
   </div>
   <div class="product-details">
-    <h3>Surf Excel Easy Wash Detergent Powder Blue – 1 Kg</h3>
+    <h3>Odonil Air Freshner – 50 gm Orchid Dew</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="118">MRP ₹118</button>
-      <button class="pay" data-pay="108">PAY ₹108</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="47">MRP ₹47</button>
+      <button class="pay" data-pay="45">PAY ₹45</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
+ <div class="card" data-id="prod-1750315545289-2425">
+  <div class="discount-banner">SAVE ₹15 (25% OFF)</div>
+  <div class="product-image">
+   <a href="/product/Generic-Microfiber-Duster.html">
+     <img src="./Cleaning & Household/page2/Generic Microfiber Duster.webp" alt="Generic Microfiber Duster">
+   </a>
+  </div>
+  <div class="product-details">
+    <h3>Generic Microfiber Duster <br> &#8203;</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="60">MRP ₹60</button>
+      <button class="pay" data-pay="45">PAY ₹45</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
+ <div class="card" data-id="prod-1750315648926-4321">
+  <div class="discount-banner">SAVE ₹1 (2% OFF)</div>
+  <div class="product-image">
+  <a href="/product/Exo-Anti-Bacterial-Dishwash.html">
+      <img src="./Cleaning & Household/page2/Exo Anti-Bacterial Dishwash Bar.webp" alt="Exo Anti-Bacterial Dishwash Bar 500 gm">
+  </a>
+  </div>
+  <div class="product-details">
+    <h3>Exo Anti-Bacterial Dishwash Bar 500 gm<br> &#8203;</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="50">MRP ₹50</button>
+      <button class="pay" data-pay="49">PAY ₹49</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
