--- a/product/HIT-Mosquito-&-Fly-Killer-Spray.html
+++ b/product/HIT-Mosquito-&-Fly-Killer-Spray.html
@@ -25,13 +25,12 @@
    <body>
                      
     <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
-
-<div class="product-detail-card" data-id="prod-1750506884167">
+<div class="product-detail-card" data-id="prod-1750507576412">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹19 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹10 (4% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16" />
+      <img id="mainImage" src="/asset/household and cleaning/page6/HIT Mosquito & Fly Killer Spray.webp" alt="HIT Mosquito & Fly Killer Spray 700 ml" />
     </div>
     <div class="thumbnail-row">
       
@@ -39,23 +38,23 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Gala Floor Wiper 16</h2>
+    <h2 class="title">HIT Mosquito & Fly Killer Spray 700 ml</h2>
     <div class="price-buttons1">
-      <button class="mrp" data-mrp="175">MRP ₹175</button>
-      <button class="pay" data-pay="156">PAY ₹156</button>
-      <div class="wishlist-toggle" data-id="prod-1750506884167">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750506884167">
-        <label for="wishlist-prod-1750506884167" class="wishlist-label">🤍</label>
+      <button class="mrp" data-mrp="269">MRP ₹269</button>
+      <button class="pay" data-pay="259">PAY ₹259</button>
+      <div class="wishlist-toggle" data-id="prod-1750507576412">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750507576412">
+        <label for="wishlist-prod-1750507576412" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
       <input type="number" class="quantity-input" value="1" min="1">
       <button class="add-to-cart">ADD TO CART</button>
     </div>
-    <p><strong>CATEGORY:</strong>  Cleaning & Household</p>
+    <p><strong>CATEGORY:</strong> Cleaning & Household</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>Gala Floor Wiper 16 – Wide blade wiper for quick and efficient drying of wet floors, ideal for everyday use.</p>
+      <p>HIT Mosquito & Fly Killer Spray 700 ml – Instantly kills mosquitoes and flies, providing long-lasting protection from disease-causing insects.</p>
     </div>
   </div>
 </div>
@@ -72,6 +71,78 @@
 
 
   <div class="products">
+
+ <div class="card" data-id="prod-1750317632058-477">
+  <div class="discount-banner">SAVE ₹25 (21% OFF)</div>
+  <div class="product-image">
+  <a href="./product/Carpet-Cleaning-Brush-Hard.html">
+      <img src="./Cleaning & Household/page4/Carpet Cleaning Brush Hard.webp" alt="Carpet Cleaning Brush Hard">
+  </a>
+  </div>
+  <div class="product-details">
+    <h3>Carpet Cleaning Brush Hard</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="120">MRP ₹120</button>
+      <button class="pay" data-pay="95">PAY ₹95</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
+<div class="card" data-id="prod-1750317723177-7275">
+  <div class="discount-banner">SAVE ₹12 (11% OFF)</div>
+  <div class="product-image">
+   <a href="./product/Dual-Floor-Cloth–2Pieces.html">
+     <img src="./Cleaning & Household/page4/Dual Floor Cloth – 2 Pieces.webp" alt="Dual Floor Cloth – 2 Pieces">
+   </a>
+  </div>
+  <div class="product-details">
+    <h3>Dual Floor Cloth – 2 Pieces</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="110">MRP ₹110</button>
+      <button class="pay" data-pay="98">PAY ₹98</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
+
+ <div class="card" data-id="prod-1750317840576-7797">
+  <div class="discount-banner">SAVE ₹21 (18% OFF)</div>
+  <div class="product-image">
+   <a href="./product/Soft-Broom-Heavy.html">
+     <img src="./Cleaning & Household/page4/Soft Broom Heavy.webp" alt="Soft Broom Heavy">
+   </a>
+  </div>
+  <div class="product-details">
+    <h3>Soft Broom Heavy</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="120">MRP ₹120</button>
+      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
  <div class="card" data-id="prod-1750317925467-3197">
   <div class="discount-banner">SAVE ₹26 (21% OFF)</div>
@@ -96,80 +167,6 @@
     </div>
   </div>
 </div>
-
- <div class="card" data-id="prod-1750317996070-8521">
-  <div class="discount-banner">SAVE ₹7 (7% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Tide-Detergent-Powder – 1kg.html">
-     <img src="./Cleaning & Household/page4/Tide Detergent Powder – 1 kg.webp" alt="Tide Detergent Powder – 1 kg Jasmine & Rose">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Tide Detergent Powder – 1 kg Jasmine & Rose</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="106">MRP ₹106</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318053199-626">
-  <div class="discount-banner">SAVE ₹7 (6% OFF)</div>
-  <div class="product-image">
-   <a href="./product/Dettol-Liquid-Handwash.html">
-     <img src="./Cleaning & Household/page4/Dettol Liquid Handwash Refill.webp" alt="Dettol Liquid Handwash Refill 750 ml">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Dettol Liquid Handwash Refill 750 ml</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="109">MRP ₹109</button>
-      <button class="pay" data-pay="102">PAY ₹102</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318130630-6953">
-  <div class="discount-banner">SAVE ₹10 (8% OFF)</div>
-  <div class="product-image">
-  <a href="./product/Surf-Excel-Easy-Wash-Detergent.html">
-      <img src="./Cleaning & Household/page4/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash Detergent Powder Blue – 1 Kg">
-  </a>
-  </div>
-  <div class="product-details">
-    <h3>Surf Excel Easy Wash Detergent Powder Blue – 1 Kg</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="118">MRP ₹118</button>
-      <button class="pay" data-pay="108">PAY ₹108</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
-
 
 
 
