--- a/product/Surf-Excel-Easy-Wash-3-kg.html
+++ b/product/Surf-Excel-Easy-Wash-3-kg.html
@@ -25,13 +25,12 @@
    <body>
                      
     <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
-
-<div class="product-detail-card" data-id="prod-1750506884167">
+<div class="product-detail-card" data-id="prod-1750507828547">
   <div class="product-image-section position-relative">
-    <div class="discount-banner1">SAVE ₹19 (11% OFF)</div>
+    <div class="discount-banner1">SAVE ₹20 (6% OFF)</div>
     <button class="zoom-icon-btn" onclick="activateZoom()">🔍</button>
     <div class="img-magnifier-container">
-      <img id="mainImage" src="/asset/household and cleaning/page5/Gala Floor Wiper 16.webp" alt="Gala Floor Wiper 16" />
+      <img id="mainImage" src="/asset/household and cleaning/page6/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash 3 kg" />
     </div>
     <div class="thumbnail-row">
       
@@ -39,26 +38,27 @@
   </div>
 
   <div class="product-info-section">
-    <h2 class="title">Gala Floor Wiper 16</h2>
+    <h2 class="title">Surf Excel Easy Wash 3 kg</h2>
     <div class="price-buttons1">
-      <button class="mrp" data-mrp="175">MRP ₹175</button>
-      <button class="pay" data-pay="156">PAY ₹156</button>
-      <div class="wishlist-toggle" data-id="prod-1750506884167">
-        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750506884167">
-        <label for="wishlist-prod-1750506884167" class="wishlist-label">🤍</label>
+      <button class="mrp" data-mrp="315">MRP ₹315</button>
+      <button class="pay" data-pay="295">PAY ₹295</button>
+      <div class="wishlist-toggle" data-id="prod-1750507828547">
+        <input type="checkbox" class="heart-checkbox" id="wishlist-prod-1750507828547">
+        <label for="wishlist-prod-1750507828547" class="wishlist-label">🤍</label>
       </div>
     </div>
     <div class="cart-controls">
       <input type="number" class="quantity-input" value="1" min="1">
       <button class="add-to-cart">ADD TO CART</button>
     </div>
-    <p><strong>CATEGORY:</strong>  Cleaning & Household</p>
+    <p><strong>CATEGORY:</strong> Cleaning & Household</p>
     <div class="product-description">
       <h4>Product Details</h4>
-      <p>Gala Floor Wiper 16 – Wide blade wiper for quick and efficient drying of wet floors, ideal for everyday use.</p>
+      <p>Surf Excel Easy Wash 3 kg – Removes tough stains with ease while keeping clothes bright, fresh, and gently cared for.</p>
     </div>
   </div>
 </div>
+
  <!----------------------------------------------paste here 😁-------------------------------------------------------------------------->
 
 
@@ -72,19 +72,18 @@
 
 
   <div class="products">
-
- <div class="card" data-id="prod-1750317925467-3197">
-  <div class="discount-banner">SAVE ₹26 (21% OFF)</div>
+<div class="card" data-id="prod-1750319156041-2866">
+  <div class="discount-banner">SAVE ₹2 (1% OFF)</div>
   <div class="product-image">
-    <a href="./product/Generic-Floor-Wiper-Plastic.html">
-      <img src="./Cleaning & Household/page4/Generic Floor Wiper Plastic.webp" alt="Generic Floor Wiper Plastic">
+    <a href="./product/Harpic-Toilet-Cleaner-Power.html">
+      <img src="./Cleaning & Household/page5/Harpic Toilet Cleaner.webp" alt="Harpic Toilet Cleaner Power Plus – 1 Litre">
     </a>
   </div>
   <div class="product-details">
-    <h3>Generic Floor Wiper Plastic</h3>
+    <h3>Harpic Toilet Cleaner Power Plus – 1 Litre</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="125">MRP ₹125</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="187">MRP ₹187</button>
+      <button class="pay" data-pay="185">PAY ₹185</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -97,18 +96,18 @@
   </div>
 </div>
 
- <div class="card" data-id="prod-1750317996070-8521">
-  <div class="discount-banner">SAVE ₹7 (7% OFF)</div>
+ <div class="card" data-id="prod-1750319216789-6094">
+  <div class="discount-banner">SAVE ₹10 (5% OFF)</div>
   <div class="product-image">
-   <a href="./product/Tide-Detergent-Powder – 1kg.html">
-     <img src="./Cleaning & Household/page4/Tide Detergent Powder – 1 kg.webp" alt="Tide Detergent Powder – 1 kg Jasmine & Rose">
-   </a>
+    <a href="./product/Gala-Actifiber-Cloth.html">
+      <img src="./Cleaning & Household/page5/Gala Actifiber Cloth.webp" alt="Gala Actifiber Cloth">
+    </a>
   </div>
   <div class="product-details">
-    <h3>Tide Detergent Powder – 1 kg Jasmine & Rose</h3>
+    <h3>Gala Actifiber Cloth</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="106">MRP ₹106</button>
-      <button class="pay" data-pay="99">PAY ₹99</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="200">MRP ₹200</button>
+      <button class="pay" data-pay="190">PAY ₹190</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -121,42 +120,18 @@
   </div>
 </div>
 
- <div class="card" data-id="prod-1750318053199-626">
-  <div class="discount-banner">SAVE ₹7 (6% OFF)</div>
+ <div class="card" data-id="prod-1750319293079-11">
+  <div class="discount-banner">SAVE ₹23 (10% OFF)</div>
   <div class="product-image">
-   <a href="./product/Dettol-Liquid-Handwash.html">
-     <img src="./Cleaning & Household/page4/Dettol Liquid Handwash Refill.webp" alt="Dettol Liquid Handwash Refill 750 ml">
-   </a>
-  </div>
-  <div class="product-details">
-    <h3>Dettol Liquid Handwash Refill 750 ml</h3>
-    <div class="price-buttons">
-      <button class="mrp" data-mrp="109">MRP ₹109</button>
-      <button class="pay" data-pay="102">PAY ₹102</button> <!-- ✅ FIXED -->
-      <label class="wishlist">
-        <input type="checkbox" class="heart-checkbox">
-        <span class="heart-icon">🤍</span>
-      </label>
-    </div>
-    <div class="cart-actions">
-      <button class="add-to-cart">ADD TO CART</button>
-      <input type="number" class="quantity-input" value="1" min="1">
-    </div>
-  </div>
-</div>
-
- <div class="card" data-id="prod-1750318130630-6953">
-  <div class="discount-banner">SAVE ₹10 (8% OFF)</div>
-  <div class="product-image">
-  <a href="./product/Surf-Excel-Easy-Wash-Detergent.html">
-      <img src="./Cleaning & Household/page4/Surf Excel Easy Wash.webp" alt="Surf Excel Easy Wash Detergent Powder Blue – 1 Kg">
+  <a href="./product/Gala-Double-Lip-Wiper.html">
+      <img src="./Cleaning & Household/page5/Gala Double Lip Wiper.webp" alt="Gala Double Lip Wiper">
   </a>
   </div>
   <div class="product-details">
-    <h3>Surf Excel Easy Wash Detergent Powder Blue – 1 Kg</h3>
+    <h3>Gala Double Lip Wiper<br> &#8203;</h3>
     <div class="price-buttons">
-      <button class="mrp" data-mrp="118">MRP ₹118</button>
-      <button class="pay" data-pay="108">PAY ₹108</button> <!-- ✅ FIXED -->
+      <button class="mrp" data-mrp="220">MRP ₹220</button>
+      <button class="pay" data-pay="197">PAY ₹197</button> <!-- ✅ FIXED -->
       <label class="wishlist">
         <input type="checkbox" class="heart-checkbox">
         <span class="heart-icon">🤍</span>
@@ -169,7 +144,29 @@
   </div>
 </div>
 
-
+ <div class="card" data-id="prod-1750319451961-2182">
+  <div class="discount-banner">SAVE ₹25 (10% OFF)</div>
+  <div class="product-image">
+   <a href="./product/Gala Active Cloth – 3 Pieces.html">
+     <img src="./Cleaning & Household/page5/Gala Active Cloth – 3 Pieces.webp" alt="Gala Active Cloth – 3 Pieces">
+   </a>
+  </div>
+  <div class="product-details">
+    <h3>Gala Active Cloth – 3 Pieces<br> &#8203;</h3>
+    <div class="price-buttons">
+      <button class="mrp" data-mrp="250">MRP ₹250</button>
+      <button class="pay" data-pay="225">PAY ₹225</button> <!-- ✅ FIXED -->
+      <label class="wishlist">
+        <input type="checkbox" class="heart-checkbox">
+        <span class="heart-icon">🤍</span>
+      </label>
+    </div>
+    <div class="cart-actions">
+      <button class="add-to-cart">ADD TO CART</button>
+      <input type="number" class="quantity-input" value="1" min="1">
+    </div>
+  </div>
+</div>
 
 
 
